--- a/Gym_Freak/frontend/package.json
+++ b/Gym_Freak/frontend/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack --mode development --watch",
+    "serve": "webpack serve --port 3001 --mode development",
     "build": "webpack --mode production"
   },
   "keywords": [],
@@ -17,7 +18,8 @@
     "babel-loader": "^9.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "webpack-cli": "^6.0.1"
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.0"
   },
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.18.6",
